--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <version>3.8.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.21</version>
+        </dependency>
 
     </dependencies>
 
