--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,16 @@
         <filters>
             <filter>src/main/resources/env/config.${env}.properties</filter>
         </filters>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
 
         <resources>
             <resource>
